Fixed overflow on mobile devices

--- a/src/app/purchase/ui/add-ons/add-ons.component.scss
+++ b/src/app/purchase/ui/add-ons/add-ons.component.scss
@@ -50,7 +50,7 @@ span {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr auto;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto auto;
     gap: var(--spacer-400);
 
     > div:last-child {
